--- a/FrontEnd_Server/src/main/resources/static/css/style.css
+++ b/FrontEnd_Server/src/main/resources/static/css/style.css
@@ -91,3 +91,16 @@
     background-color: lightgray;
     color: gray;
 }
+
+.form-info {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    padding: 8px 16px;
+    display: grid;
+    width: 75%;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    background-color: lightgray;
+    border-radius: 8px;
+    box-shadow: 10px 10px 5px black;
+}
