--- a/FrontEnd_Server/src/main/resources/static/views/details.html
+++ b/FrontEnd_Server/src/main/resources/static/views/details.html
@@ -7,8 +7,8 @@
             <input type="text" ng-model="userDetails.firstName">
             <label>last name</label>
             <input type="text" ng-model="userDetails.lastName">
-            <label>sure name</label>
-            <input type="text" ng-model="userDetails.sureName">
+            <label>surname</label>
+            <input type="text" ng-model="userDetails.surName">
             <label>e-mail</label>
             <input type="email" ng-model="userDetails.email">
             <label>phone</label>
